# m3sgg

./: .gitignore  MIGRATION.md  README.md  TODO.md  app.py  pyproject.toml  pyrightconfig.json  pytest.ini  test-workflow.md  test.py  train.py  vercel.json
.github/workflows/: docs-test.yml  docs.yml  tests.yml
.streamlit/: config.toml
configs/: CONFIG_MIGRATION_GUIDE.md  CONFIG_README.md  INTEGRATION_SUMMARY.md  config_usage.py  tempura.yaml
configs/experiments/: scenellm_vqvae.yaml
data/: README.md
dataloader/: EASG.py  action_genome.py
datasets/: action_genome.py  factory.py
docs/: Makefile  README.md  SETUP.md  api.rst  changelog.rst  conf.py  contributing.rst  datasets.rst  evaluation.rst  index.rst  installation.rst  license.rst  models.rst  training.rst  usage.rst
docs/_build/doctrees/: models.doctree
docs/_build/html/: .buildinfo  .buildinfo.bak  README.html  api.html  changelog.html  contributing.html  datasets.html  evaluation.html  genindex.html  index.html  installation.html  license.html  models.html  objects.inv  py-modindex.html  search.html  searchindex.js  training.html  usage.html
docs/_static/: custom.css
docs/api/: cli.rst  core.rst  dataloader.rst  datasets.rst  language.rst  lib.rst  models.rst  utils.rst
examples/: 01_basic_video_scene_graph_generation.ipynb  02_scene_graph_to_text_summarization.ipynb  03_end_to_end_video_to_summary.ipynb  04_advanced_vlm_scene_graph_generation.ipynb  05_model_comparison_and_evaluation.ipynb  README.md  llm_chat_example.py
fasterRCNN/: test_net.py  trainval_net.py
fasterRCNN/lib/: setup.py
fasterRCNN/lib/datasets/: pascal_voc_rbg.py
fasterRCNN/lib/roi_data_layer/: roidb.py
lib/: AdamW.py  checkpoint_utils.py  config.py  config_omegaconf.py  config_structured.py  config_utils.py  ds_track.py  evaluation_recall.py  funcs.py  infoNCE.py  matcher.py  memory.py  object_detector.py  object_detector_EASG.py  pytorch_misc.py  sttran.py  sttran_EASG.py  track.py  transformer.py  uncertainty.py  vlm.py  word_vectors.py
lib/configs/: README.md  base.yaml  config_omegaconf.py  config_structured.py  config_utils.py  easg.yaml  oed.yaml  stket.yaml  usage.py
lib/configs/experiments/: action_genome_small.yaml
lib/datasets/: __init__.py  factory.py
lib/draw_rectangles/: __init__.py  draw_rectangles.py
lib/easg/: __init__.py  object_detector_EASG.py  sttran_EASG.py
lib/fpn/: box_utils.py
lib/fpn/box_intersections_cpu/: __init__.py
lib/language/evaluation/: README.md  __init__.py  benchmark.py  dataset_loader.py  dataset_loader_simple.py  demo_benchmark.py  requirements.txt  run_benchmark.py  test_evaluation.py
lib/language/summarization/: summarize.py
lib/nlp/: summarization_wrapper.py  summarize.py
lib/nlp_module/: README_summarization.md  __init__.py  summarization_wrapper.py  summarize.py
lib/oed/: criterion.py  oed_multi.py  oed_single.py  postprocess.py  transformer.py  utils.py
lib/scenellm/: __init__.py  llm.py  network.py  ot.py  scenellm.py  sia.py  vqvae.py
lib/stket/: __init__.py  stket.py  transformer_stket.py
lib/tempura/: __init__.py  gmm_heads.py  tempura.py  transformer_tempura.py
lib/ults/: __init__.py  pytorch_misc.py
scripts/: run_tests.ps1
scripts/apps/: demovideo.py  pyqt.py  simple_drawing_methods.py  streamlit.ps1  streamlit.py
scripts/apps/components/: __init__.py  dark_mode.py  graph_processing.py  model_utils.py  results_tabs.py  sidebar.py  video_analysis.py  video_debug.py  video_processing.py
scripts/core/: batch_train.ps1  batch_train.sh  demo.py  gui.py  run_easg_rnd_search.py  run_streamlit.ps1  train_scenellm_example.py  train_with_EASG.py
scripts/core/apps/: demovideo.py  pyqt.py  run_streamlit.ps1  streamlit.py
scripts/core/evaluation/: test.py
scripts/core/training/: train.py
scripts/data_scripts/: analyze_action_genome9000.py  check_word_vector_cache.py  countPrior.py  debug_dataset.py
scripts/data_scripts/easg/: produce_roi_features.py
scripts/datasets/: analyze_action_genome9000.py  check_features_vs_annotations.py  countPrior.py  debug_dataset.py  simple_ag9000_analyzer.py
scripts/evaluation/: test.py
scripts/model_scripts/: debug_rcnn.py  debug_rcnn_scores.py  download_slowfast_r101.py  temp_hp_search.ps1  tempura_hp_generator.py  tempura_results_analyzer.py
scripts/models/: debug_rcnn.py  debug_rcnn_scores.py  fix_word_vector_cache.py  precache_word_vectors.py  temp_hp_search.ps1  tempura_hp_generator.py  tempura_results_analyzer.py  train_scenellm_example.py
scripts/training/: training.py
scripts/training/easg/: train_with_EASG.py
src/m3sgg/: __init__.py  __main__.py
src/m3sgg/cli/: __init__.py  main.py  train.py
src/m3sgg/core/: __init__.py  constants.py
src/m3sgg/datasets/: __init__.py  easg.py  factory.py
src/m3sgg/language/: README.md  __init__.py  requirements.txt
src/m3sgg/utils/: AdamW.py  __init__.py  checkpoint_utils.py  funcs.py  infoNCE.py  memory.py  model_detector.py  pytorch_misc.py  track.py  (+3 more)
tests/: README.md  conftest.py  simple_test.py  test_bbox_prediction.py  test_config.py  test_config_omegaconf.py  test_expanded_video_selection.py  test_gui_performance.py  test_gui_summarization.py  test_gui_video_selection.py  test_lower_threshold.py  test_oed_integration.py  test_rcnn_simple.py  test_real_commands.py  test_scenellm_components.py  test_scenellm_full_pipeline.py  test_scenellm_inference.py  test_scenellm_integration.py  test_scenellm_training.py  test_stages.py  test_summarization_wrappers.py  test_temporal_fixes.py  test_temporal_sequence.py  test_video_cycling.py  test_video_navigation.py  test_video_selection.py
tests/integration/: test_real_commands.py  test_scenellm_inference.py  test_scenellm_training.py
tests/performance/: test_gui_performance.py  test_gui_summarization.py  test_gui_video_selection.py
utils/: util.py
utils/EASG_utils/: convert_annts_format.py  create_coco_annotations.py  dump_frames_to_lmdb_files.py  extract_object_frames.py  extract_verb_features.py  get_noun_categories.py  produce_object_detections.py  train_object_detector.py
(+186 files in other folders)
